Changed the way to check path